# NES-template

./: .gitignore  README.ipynb  README.md  programming-lessons-README.md  programming-lessons.ipynb
.github/agents/: another-agent.md
.github/prompts/: docs-writing.prompt.md  docs.prompt.md
1-Changing_Intent/: Converter.java  DataProcessor.cs  README.md  Statistics.cs  UserAccount.java  array-utils.js  calculator.js  calculator.py  geometry.js  geometry.py  geometry.ts  stats.cpp  stats.rb  stats.ts
2-Adding_Logic/: README.md  game.py
2-Adding_Logic/extension-sample/: package-lock.json
3-Changing_Fixing_Logic/: README.md  scenarios.js  scenarios.ts
3-Changing_Fixing_Logic/js-game/: index.js  package-lock.json  package.json
4-Refactoring/: README.md  calculator.py
4-Refactoring-Go/: README.md  go.mod  main.go  main_test.go
5-Fuller/: README.md
5-Fuller/astro-islands-app/: README.md  astro.config.mjs  package-lock.json  package.json
5-Fuller/task-manager-app/: .gitignore  README.md  package-lock.json  package.json
6-Another_Game_Example/: word_game.py
6-Backend_API/express-auth-api/: .env.example  .gitignore  README.md  database.js  middleware.js  (+4 more)
6-Configuration/: Makefile  README.md  TESTING.md  apache.conf  app.yaml  docker-compose.yml  nginx.conf  package.json  pyproject.toml  task-config.json  task-config.schema.json  test_configs.js  test_configurations.py  validate_configs.sh
6-Cross_File_Refactoring/: README.md
6-Go-Conversion/: README.md  go.mod  main.go
6-WebAssembly/: Makefile  QUICKSTART.md  README.md  package.json  setup.sh
6-multi-service/: README.md  docker-compose.yml
6-testing/: MathOperations.java  MathOperationsTest.java  README.md  array_utils.h  array_utils_test.cpp  calculator.js  calculator.test.js  string_utils.py  test_string_utils.py  user-service.test.ts  user-service.ts
7-Lessons-Notebook/: README.md
docs/: best-practices.md  getting-started.md  nes-overview.md
(+62 files in other folders)
